[gd_scene load_steps=5 format=3 uid="uid://c14jfxcnejr5p"]

[ext_resource type="Script" uid="uid://htt0a7qbve77" path="res://scripts/trash_photographer.gd" id="1_83ci2"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2mc72"]
sky_top_color = Color(0.501961, 0.501961, 0.501961, 1)
sky_horizon_color = Color(1.0875, 1.0875, 1.0875, 1)
ground_bottom_color = Color(0.501961, 0.501961, 0.501961, 1)
ground_horizon_color = Color(1.0875, 1.0875, 1.0875, 1)

[sub_resource type="Sky" id="Sky_xvsrc"]
sky_material = SubResource("ProceduralSkyMaterial_2mc72")

[sub_resource type="Environment" id="Environment_84k52"]
background_mode = 1
sky = SubResource("Sky_xvsrc")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.2
reflected_light_source = 1
glow_enabled = true

[node name="trashPhotographer" type="Node3D"]
script = ExtResource("1_83ci2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_84k52")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.680081, -0.528262, 0.508358, 0, 0.693402, 0.720551, -0.733137, -0.490033, 0.47157, 0, 0, 0)
light_indirect_energy = 0.0
shadow_enabled = true
sky_mode = 1

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.464842, 0.637971, -0.613934, -1.86114e-09, 0.693402, 0.720551, 0.885394, -0.334942, 0.322322, 0, 0, 0)
light_energy = 0.25
light_indirect_energy = 0.0
sky_mode = 1

[node name="trashMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 0, 0, 0)

[node name="camArm" type="Node3D" parent="."]

[node name="trashCam" type="Camera3D" parent="camArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
fov = 45.0

[node name="toyPos" type="Node3D" parent="."]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 0, 0, 0)
